adding responsive homepage carrousel

--- a/Dream_shop/dream_shop/static/styles/header.css
+++ b/Dream_shop/dream_shop/static/styles/header.css
@@ -125,154 +125,11 @@ body, html {
   animation: glow 1s infinite;
 }
 
-
-/* ###################################################################################################
-   #########################################  MEDIA QUERIES  #########################################
-   ################################################################################################### */
-
-
-  /************** 1750px *****************/
-
-@media screen and (max-width: 1750px) {
-  .nav-section a {
-    color: white;
-    text-decoration: none;
-    margin: 0px;
-  }
-  .search-bar {
-    padding: 1rem;
-  }
-  .search-bar input {
-    padding: 0.5rem;
-    font-size: 1rem;
-    border-radius: 15px;
-    width: 400px;
-    height: 30px;
-    margin-right: 0px;
-  }
-  #cart-items {
-    right: 3.6rem;
-  }
-}
-
-/************** 1250px *****************/
-
-@media screen and (max-width: 1270px) {
-  .logo img {
-    width: 300px;
-    height: 90px;
-  }
-  .social-icons img {
-    height: 60%;
-  }
-  .promo-message {
-    padding: 7px 0;
-    font-size: 1.2em;
-  }
-  .nav-bar {
-    padding: 10px 0;
-    padding-top: 40px;
-    height: 65px;
-  }
-  .nav-bar ul {
-    padding-left: 10px;
-  }
-  .nav-bar a {
-    display: block;
-    font-size: 18px;
-    padding: 1rem 0.9rem;
-  }
-  .search-bar input {
-    font-size: 14px;
-    width: 290px;
-    height: 19px;
-  }
-  .nav-bar .menu li:hover>ul,
-  .nav-bar .menu ul li:hover>ul {
-    width: 100px;
-  }
-  .nav-bar .menu ul a {
-    font-size: 15px;
-    padding-left: 0;
-    margin-top: 0px;
-  }
-  #cart-items {
-  top: 50%;
-  right: 2.5rem;
-  width: 20px;
-  height: 20px;
-  font-size: 14px;
-}
-}
-
-/******************************* 831px ***************************/
-
-@media screen and (max-width: 831px) {
-  .logo img {
-    width: 200px;
-    height: 60px;
-  }
-  .social-icons img {
-    height: 50%;
-  }
-  .promo-message {
-    padding: 2px 0;
-    font-size: 1em;
-  }
-  .nav-bar {
-    padding: 10px 0;
-    display: flex;
-    padding-top: 40px;
-    height: 45px;
-  }
-  .nav-bar a {
-    font-size: 15px;
-  }
-  .search-bar input {
-    width: 115px;
-    height: 10px;
-  }
-  #cart-items {
-    top: 50%;
-    right: 1.8rem;
-    width: 15px;
-    height: 15px;
-    font-size: 12px;
-  }
-}
-
-/************** jusqu'à 600px *****************/
-
 @media screen and (max-width: 600px) {
-  .social-icons img {
-    display: none;  /* Cacher les logos des réseaux sociaux */
-  }
- 
   .logo img {
-    width: 150px;   /* Reduire la taille du logo */
-    height: 50px;
-  }
-  .promo-message {
-    padding: 2px 0;
-    font-size: 1em;
-  }
-  .nav-bar {
-    padding: 5px 0; /* Diviser la marge intérieure de la barre de navigation par 2 */
-    display: flex;
-    padding-top: 20px; /* Diviser le padding-top par 2 */
-  }
-  .nav-bar a {
-    font-size: 10px; /* Reduire la taille de la police */
-    margin-left: -2px;
-  }
-  .search-bar input {
-    display: none;
-  }
-  #cart-items {
-    top: -10%;
-    right: 1rem;
-    width: 15px;
-    height: 15px;
-    font-size: 12px;
+    width: 400px;
+    height: 120px;
+    transition: transform 0.2s;
   }
 }
+
