--- a/Dream_shop/templates/store/cart.html
+++ b/Dream_shop/templates/store/cart.html
@@ -123,7 +123,7 @@
             <button type="button">Continuer les achats</button>
           </a>
           <!-- Bouton pour passer à la caisse -->
-          <button type="button">Passer à la caisse</button>
+          <button type="button" onclick="return confirm('Merci pour votre achat !')">Passer à la caisse</button>
         </div>
       </div>
     </div>
