--- a/Dream_shop/dream_shop/static/styles/navbar.css
+++ b/Dream_shop/dream_shop/static/styles/navbar.css
@@ -258,3 +258,247 @@
   letter-spacing: 2px;
   color: #FFD700;
 }
+
+
+/* ###################################################################################################
+   #########################################  MEDIA QUERIES  #########################################
+   ################################################################################################### */
+
+
+  /************** 1750px *****************/
+
+  @media screen and (min-width: 1271px) and (max-width: 1750px) {
+    .nav-section a {
+      color: white;
+      text-decoration: none;
+      margin: 0px;
+    }
+    .nav-bar {
+      padding: 10px 0;
+      padding-top: 10px;
+      height: 65px;
+    }
+    .nav-bar ul {
+      padding-left: 10px;
+    }
+    .nav-bar a {
+      display: block;
+      font-size: 18px;
+      padding: 1rem 0.9rem;
+    }
+    .search-bar {
+      padding: 1rem;
+    }
+    .search-bar input {
+      padding: 0.5rem;
+      font-size: 1rem;
+      border-radius: 15px;
+      width: 350px;
+      height: 30px;
+      margin-right: 0px;
+    }
+    #cart-items {
+      top: 31%;
+      right: 2.5rem;
+    }
+  }
+  
+  /************** 1250px *****************/
+  
+  @media screen and (min-width: 1024px) and (max-width: 1270px) {
+    .logo img {
+      width: 300px;
+      height: 90px;
+    }
+    .social-icons img {
+      height: 60%;
+    }
+    .promo-message {
+      padding: 7px 0;
+      font-size: 1.2em;
+    }
+    .nav-bar {
+      padding: 10px 0;
+      padding-top: 10px;
+      height: 65px;
+    }
+    .nav-bar ul {
+      padding-left: 10px;
+    }
+    .nav-bar a {
+      display: block;
+      font-size: 18px;
+      padding: 1rem 0.9rem;
+    }
+    .search-bar input {
+      font-size: 14px;
+      width: 290px;
+      height: 19px;
+    }
+    .nav-bar .menu li:hover>ul,
+    .nav-bar .menu ul li:hover>ul {
+      width: 100px;
+    }
+    .nav-bar .menu ul a {
+      font-size: 15px;
+      padding-left: 0;
+      margin-top: 0px;
+    }
+    #cart-items {
+    top: 32%;
+    right: 3.6rem;
+    width: 20px;
+    height: 20px;
+    font-size: 14px;
+  }
+  }
+  
+  /******************************* 831px ***************************/
+  @media screen and (min-width: 948px) and (max-width: 1023px)  {
+    .logo img {
+      width: 200px;
+      height: 60px;
+    }
+    .social-icons img {
+      height: 50%;
+    }
+    .promo-message {
+      padding: 2px 0;
+      font-size: 1em;
+    }
+    .nav-bar {
+      padding: 10px 0;
+      display: flex;
+      padding-top: 10px;
+      height: 45px;
+    }
+    .nav-bar ul {
+      padding-left: 1px;
+    }
+    .nav-bar a {
+      font-size: 15px;
+      padding: 1rem;
+    }
+    .search-bar input {
+      width: 110px;
+      height: 10px;
+    }
+    #cart-items {
+      top: 23%;
+      right: 4.8rem;
+      width: 15px;
+      height: 15px;
+      font-size: 12px;
+    }
+  }
+  
+  /************** jusqu'à 767px *****************/
+  
+  @media screen and (min-width: 768px) and (max-width: 947px) {
+    .social-icons img {
+      width: 20px;
+      height: 20px;
+    }
+    .promo-message {
+      padding: 2px 0;
+      font-size: 1em;
+    }
+    .logo img {
+      width: 200px;
+      height: 60px;
+    }
+    .social-icons img {
+      height: 50%;
+    }
+    .promo-message {
+      padding: 2px 0;
+      font-size: 1em;
+    }
+    .nav-bar {
+      padding: 10px 0;
+      display: flex;
+      padding-top: 10px;
+      height: 45px;
+      padding: 0;
+    }
+    .nav-bar ul {
+      padding-left: 1px;
+      margin: -20px;
+      margin-right: -45px;
+    }
+    .nav-bar a {
+      font-size: 10px;
+    }
+    .search-bar input {
+      width: 50px;
+      height: 10px;
+      font-size: 15px;
+      margin-left: 10px;
+    }
+    #cart-items {
+      top: 23%;
+      right: 4.8rem;
+      width: 15px;
+      height: 15px;
+      font-size: 12px;
+    }
+    /* Element factice pour gérer la sticky bar */
+    #dummy_nav {
+      height: 47px;
+}
+  }
+  
+  @media screen and (max-width: 767px) {
+    .social-icons img {
+      margin-left: -10px;
+      width: 20px;
+      height: 20px;
+    }
+    .promo-message {
+      padding: 2px 0;
+      font-size: 1em;
+    }
+    .logo img {
+      width: 200px;
+      height: 60px;
+    }
+    .social-icons img {
+      height: 50%;
+    }
+    .promo-message {
+      padding: 2px 0;
+      font-size: 1em;
+    }
+    .nav-bar {
+      padding: 10px 0;
+      display: flex;
+      padding-top: 10px;
+      height: 45px;
+      padding: 0;
+    }
+    .nav-bar ul {
+      padding-left: 1px;
+    }
+    .nav-bar a {
+      font-size: 10px;
+      padding: 1.2rem;
+    }
+    .search-bar input {
+      width: 50px;
+      height: 10px;
+      font-size: 15px;
+      margin-left: 10px;
+    }
+    #cart-items {
+      top: 23%;
+      right: 2rem;
+      width: 15px;
+      height: 15px;
+      font-size: 12px;
+    }
+    /* Element factice pour gérer la sticky bar */
+    #dummy_nav {
+      height: 47px;
+}
+  
+  }
